responsive wd and fix bugs

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -181,6 +181,13 @@ body
   right 95px
   width 20px
   height 20px
+.shopcart-img
+  background-position top center
+  background-size contain
+  height 135px
+  background-repeat no-repeat
+.excerpt-shopping
+  padding-top 50px
 header
   width 100%
   overflow hidden
@@ -412,6 +419,16 @@ header
     font-size 22px
 
 /************** content area default ****************/
+.send-email
+  padding-bottom 10px
+.info
+  color rgba(0, 0, 0, 0.20)
+  font-size 1.7em
+.info2
+  font-family 'Roboto'
+  text-transform uppercase
+  font-weight 100
+  color #565656
 .dividerw
   border 1px solid #ccc
   margin-top 0
@@ -479,7 +496,7 @@ header
     font-size 1.5em
     padding-left 5px
 .detail-img
-  height 300px
+  height 280px
   background-size contain
   background-repeat no-repeat
   background-position center center
@@ -1114,6 +1131,9 @@ header
     width 100%
 
 /* dashboard area*/
+.content-dashboard
+  padding 70px 60px
+  background-color #fff
 .title-section
   padding 10px 0 15px 0
   position relative
@@ -1126,7 +1146,7 @@ header
   .line-divider
     position relative
     color red
-.menu
+.menu-dash
   padding 5px
   position relative
   .menu-item
@@ -1214,7 +1234,7 @@ header
         border 2px solid transparent
         transition all 0.5s
         &.paypal
-          background-image url("http://www.marc.com.mx/mcweb/wp-content/uploads/2015/12/paypal.png")
+          background-image url("http://www.ayudapayoneer.com/wp-content/uploads/2015/10/payoneer-paypal-01.png")
         &.bank-deposit
           background-image url("https://elsoldemexico.com.mx/wp-content/uploads/2016/03/bancos.jpg")
         &.credit-card
@@ -1279,6 +1299,13 @@ footer
 .btn
   font-size 18px
 /* buttons sizes */
+.btn-outline-red
+  color #d9534f
+  background-image none
+  background-color transparent
+  border-color #d9534f
+  &:hover
+    color #d9534f
 .btn-big
   padding 25px 30px
   font-size 20px
