--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -227,9 +227,18 @@
   #contact-section
     background-size cover
     padding 30px 0
+
+  .menu-dash
+    .menu-item
+      margin-bottom 10px
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .shopcart-qty
+    position re
+    margin auto 29.5%
+  .shopcart-delete
+    padding-bottom 15px
   .prod-entry
     padding 15px 6% 10px !important
   .perfil
@@ -258,7 +267,7 @@
   .navbar-info a, .navbar-info a > i
     font-size 16px
   .qty-cart
-    right 170px
+    right 45%
   .navbar-info
     .col-sm-4 
       text-align center
@@ -558,6 +567,10 @@
   .content-post
     .pull-left
       float none !important
+
+  .menu-dash
+    .menu-item
+      margin-bottom 10px
 
 /* Wide Mobile Layout: 480px. */
 
