--- a/app/templates/auth/history-sales.html
+++ b/app/templates/auth/history-sales.html
@@ -1,5 +1,5 @@
 <div id="content-area">
-    <div class="container">
+    <div class="container-fluid">
         <div class="card-heading">
             <h4>Historial de compras</h4>
         </div>
