--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,5 +1,5 @@
 <section id="content-contact">
-    <div class="">
+    <div class="container">
         <div class="form-section">
             <div class="container">
                 <div class="col-md-6 contact-section">
@@ -48,11 +48,12 @@
                                 </div>
                             </div>
                             <div class="form-group" ng-class="{ 'has-error': registerForm.username.$touched && registerForm.username.$invalid }">
-                                <input type="text" ng-minlength="8"  ng-model="Access.formData.username" class="form-control" id="username" name="username"
+                                <input type="text" ng-minlength="6" ng-maxlength="15" ng-model="Access.formData.username" class="form-control" id="username" name="username"
                                        placeholder="Usuario" required>
                                 <div class="help-block" ng-messages="registerForm.username.$error" ng-if="registerForm.username.$touched">
                                     <div ng-message="required">Este campo es requerido.</div>
-                                    <div ng-message="minlength">Mínimo 8 caracteres.</div>
+                                    <div ng-message="minlength">Mínimo 6 caracteres.</div>
+                                    <div ng-message="maxlength">Máximo 15 caracteres.</div>
                                 </div>
                             </div>
                             <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
