--- a/app/templates/auth/partials/account_activated.html
+++ b/app/templates/auth/partials/account_activated.html
@@ -1,9 +1,9 @@
 <section id="content-area">
     <div class="container">
         <div class="row text-center">
-            <h1>Cuenta activada correctamente</h1>
+            <h1 class="info2"><i class="ion-ios-checkmark"></i> Cuenta activada correctamente</h1>
             <p><a ui-sref="register">Iniciar Sesión</a></p>
-            <img src="../../img/corriente-alterna-logo.png" alt="">
+            <img src="../../../img/corriente-alterna-logo.png" alt="">
         </div>
     </div>
 </section>
