--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -2,39 +2,41 @@
     <h2 class="title text-center">{{Product.categoryName}}</h2>
 </div>
 <section id="content-area" class="content-blog">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div class="content-pages" infinite-scroll='Product.getMorePosts()' infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
-                    <div class="row text-center">
-                        <div class="col-sm-4" ng-repeat="product in Product.list">
-                            <div class="box-prod" ng-if="!Product.isPost">
-                                <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
-                                    <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
-                                    <h3 class="prod-descrip">{{product.name}}</h3>
-                                    <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
-                                </a>
-                                <a ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
-                                   ng-disabled="Product.itemInCart(product)"
-                                   class="btn btn-success btn-cart">Agregar al Carrito</a>
-                            </div>
-                            <div class="box-prod" ng-if="Product.isPost">
-                                <a ui-sref="post_detail({slug:product.slug})">
-                                    <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
-                                    <h3 class="prod-descrip">{{product.title}}</h3>
-                                </a>
-                                <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
-                            </div>
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <div class="content-pages" infinite-scroll='Product.getMorePosts()'
+                 infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
+                <div class="row text-center">
+                    <div class="col-sm-4" ng-repeat="product in Product.list">
+                        <div class="box-prod" ng-if="!Product.isPost">
+                            <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
+                                <div class="bg-prod"
+                                     style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                <h3 class="prod-descrip">{{product.name | characters: 30}}</h3>
+                                <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
+                            </a>
+                            <a ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
+                               ng-disabled="Product.itemInCart(product)"
+                               class="btn btn-success btn-cart">Agregar al Carrito</a>
                         </div>
-                        <div class="col-sm-12" ng-show="Product.busy">
-                            <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
-                        </div>
-                        <div class="col-sm-12" ng-show="!Product.busy">
-                            <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con contenido disponible</h2>
+                        <div class="box-prod" ng-if="Product.isPost">
+                            <a ui-sref="post_detail({slug:product.slug})">
+                                <div class="bg-prod"
+                                     style="background-image: url('{{product.featuredImage.url }}')"></div>
+                                <h3 class="prod-descrip">{{product.title}}</h3>
+                            </a>
+                            <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
                         </div>
                     </div>
-                    <!--post list -->
+                    <div class="col-sm-12" ng-show="Product.busy">
+                        <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
+                    </div>
+                    <div class="col-sm-12" ng-show="!Product.busy">
+                        <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
+                            contenido disponible</h2>
+                    </div>
                 </div>
+                <!--post list -->
             </div>
         </div>
     </div>
