--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
 </section>
 <section class="products">
     <div class="container">
-        <div class="box-products">
+        <div class="box-products" ng-controller="ShoppingCtrl as Shop">
             <div class="row text-center">
                 <div class="prod-title">
                     <h3>Conoce nuestros productos</h3>
@@ -40,12 +40,16 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-sm-3" ng-repeat="product in Home.products">
+                <div class="col-sm-4 col-md-3" ng-repeat="product in Home.products">
                     <div class="box-prod">
-                        <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
-                        <h3 class="prod-descrip">{{product.title}}</h3>
-                        <h4 class="prod-price" ng-if="ecommerce"><strong>{{product.excerpt | currency}}</strong></h4>
-                        <button class="btn btn-success btn-cart" ng-disabled="!ecommerce">Agregar al carrito</button>
+                        <a href="" ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
+                            <div class="bg-prod" style="background-image: url('{{product.featuredImage.url }}')"></div>
+                            <h3 class="prod-descrip">{{product.name}}</h3>
+                        </a>
+                        <h4 class="prod-price"><strong>{{product.price | currency}}</strong></h4>
+                        <button class="btn btn-success btn-cart"
+                                ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
+                                ng-disabled="Shop.itemInCart(product)">Agregar al carrito</button>
                     </div>
                 </div>
             </div>
