--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -3,76 +3,83 @@
 </div>
 <section id="content-area" class="shop-cart">
     <div ng-if="ShopCart.items.length==0" class="text-center">
-        <h1>NO se han agregado productos al carrito</h1>
+        <h3 class="info"><i class="fa fa-warning"></i> No se han agregado productos al carrito</h3>
         <a ui-sref="products">Ver productos</a>
     </div>
-    <div class="container" ng-if="ShopCart.items.length>0">
-        <div class="row">
-            <div class="col-md-3 pull-right">
-                <div class="clear-cart" style="margin-bottom: 10px">
-                    <button class="btn btn-default" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
-                </div>
-            </div>
-            <div class="col-md-2 pull-right">
-                <div class="clear-cart" style="margin-bottom: 10px">
-                    <button class="btn btn-default" ui-sref="products">Seguir comprando</button>
-                </div>
+    <div class="row" ng-if="ShopCart.items.length>0">
+        <div class="col-md-3 pull-right">
+            <div class="clear-cart" style="margin-bottom: 10px">
+                <button class="btn btn-default" ng-click="ShopCart.clearCart()">Vaciar Carrito</button>
             </div>
         </div>
-        <hr>
-        <div class="row">
-            <div class="col-md-9 text-center">
-                <div class="product-cart col-md-12" ng-repeat="product in ShopCart.items">
-                    <div class="col-md-3">
-                        <div class="shopcart-img">
-                            <img ng-src="{{product.image}}" alt="" width="250">
-                        </div>
+        <div class="col-md-2 pull-right">
+            <div class="clear-cart" style="margin-bottom: 10px">
+                <button class="btn btn-default" ui-sref="products">Seguir comprando</button>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-9 text-center">
+            <div class="product-cart col-sm-6 col-md-12" ng-repeat="product in ShopCart.items">
+                <div class="col-md-3">
+                    <div class="shopcart-img">
+                        <div class="shopcart-img" style="background-image:url('{{ product.image }}');"></div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="shopcart-descrip">
-                            <h4>{{ product.name }}</h4>
-                            <h3>{{ product.price | currency }}</h3>
-                        </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="shopcart-descrip">
+                        <h4>{{ product.name }}</h4>
+                        <h3>{{ product.price | currency }}</h3>
                     </div>
-                    <div class="col-md-2">
-                        <p>Cantidad</p>
-                    </div>
-                    <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                    <p>Cantidad</p>
+                </div>
+                <div class="col-md-2">
+                    <div class="col-sm-offset-3 col-sm-4">
                         <div class="shopcart-qty">
                             <input type="number" min="0"
                                    ng-model="product.qty"
                                    ng-click="ShopCart.setItem({id: product.id, name: product.name, price: product.price, qty: product.qty}, product.qty)"
-                                   class="form-control cart-qty"  placeholder="{{ product.qty }}">
+                                   class="form-control cart-qty" placeholder="{{ product.qty }}">
                         </div>
                     </div>
-                    <div class="shopcart-delete">
-                        <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)" style="font-size: 25px;" title="Eliminar producto"></a>
+                    <div class="col-sm-4 hidden-lg">
+                        <div class="shopcart-delete">
+                            <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)" style="font-size: 25px;"
+                               title="Eliminar producto"></a>
+                        </div>
                     </div>
                 </div>
+                <div class="shopcart-delete visible-lg">
+                        <a class="ion-ios-close-outline" ng-click="ShopCart.removeItem(product)" style="font-size: 25px;"
+                           title="Eliminar producto"></a>
+                </div>
             </div>
-            <div class="col-md-3">
-                <div class="details-prod">
-                    <h4 class="text-center">Resumen de pedido</h4>
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <tbody>
-                            <tr>
-                                <td>Subtotal({{ items.length }})</td>
-                                <td>{{ ShopCart.total | currency}}</td>
-                            </tr>
-                            <tr>
-                                <td>Envío</td>
-                                <td>$0</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>{{ ShopCart.total | currency}}</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <a class="btn btn-success btn-cart btn-block"
-                           ng-click="ShopCart.processPurchase()" >Procesar compra</a>
-                    </div>
+        </div>
+        <div class="col-sm-12 col-md-3 excerpt-shopping">
+            <div class="details-prod">
+                <h4 class="text-center">Resumen de pedido</h4>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <tbody>
+                        <tr>
+                            <td>Subtotal({{ items.length }})</td>
+                            <td>{{ ShopCart.total | currency}}</td>
+                        </tr>
+                        <tr>
+                            <td>Envío</td>
+                            <td>$0</td>
+                        </tr>
+                        <tr>
+                            <td>Total</td>
+                            <td>{{ ShopCart.total | currency}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a class="btn btn-success btn-cart btn-block"
+                       ng-click="ShopCart.processPurchase()">Procesar compra</a>
                 </div>
             </div>
         </div>
