fix dashboard and create profile

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1131,6 +1131,8 @@ header
     width 100%
 
 /* dashboard area*/
+.container-dash
+  width 680px
 .content-dashboard
   padding 70px 60px
   background-color #fff
