--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -66,6 +66,8 @@
 
 
 @media only screen and (min-width: 768px) and (max-width: 1024px)
+  .excerpt-shopping
+    padding-top 50px
   .detail-qty
     margin-left 42%
   .detail-price
@@ -234,6 +236,8 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .excerpt-shopping
+    padding-top 50px
   .shopcart-qty
     position re
     margin auto 29.5%
