--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -1,4 +1,4 @@
-<div class="content-dashboard">
+<section class="content-profile">
     <div class="container">
         <div class="row">
             <section id="content-contact">
@@ -14,17 +14,17 @@
                                     <form class="padding form-horizontal">
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
-                                                <label for="user">Usuario</label>
-
-                                                <input type="text" class="form-control" id="user" name="user"
-                                                       placeholder="Usuario"
-                                                       required>
-                                            </div>
-                                            <div class="form-item">
                                                 <label for="name">Nombre</label>
 
                                                 <input type="text" class="form-control" id="name" name="name"
                                                        placeholder="Nombre"
+                                                       required>
+                                            </div>
+                                            <div class="form-item">
+                                                <label for="user">Usuario</label>
+
+                                                <input type="text" class="form-control" id="user" name="user"
+                                                       placeholder="Usuario"
                                                        required>
                                             </div>
                                             <div class="form-item">
@@ -47,18 +47,18 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-item">
-                                                <label for="email">Correo electrónico</label>
-
-                                                <input type="email" class="form-control" id="email" name="email"
-                                                       placeholder="Correo electrónico" required>
-                                            </div>
-                                            <div class="form-item">
                                                 <label for="secondname">Apellídos</label>
 
                                                 <input type="text" class="form-control" id="secondname"
                                                        name="secondname"
                                                        placeholder="Apellídos"
                                                        required>
+                                            </div>
+                                            <div class="form-item">
+                                                <label for="email">Correo electrónico</label>
+
+                                                <input type="email" class="form-control" id="email" name="email"
+                                                       placeholder="Correo electrónico" required>
                                             </div>
                                             <div class="form-item">
 
@@ -93,4 +93,4 @@
             </section>
         </div>
     </div>
-</div>
+</section>
