--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 menu-dash">
+                <div class="col-md-3 menu-dash" ui-sref="address">
                     <div data-url_target="about_us" class="profile-btn menu_button menu-item">
                         <img alt="" src="../../img/about.jpg">
                         <div class="mask">
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 menu-dash">
+                <div class="col-md-3 menu-dash" ui-sref="address-add">
                     <div data-url_target="about_us" class="profile-btn menu_button menu-item">
                         <img alt="" src="../../img/about.jpg">
                         <div class="mask">
