--- a/app/templates/auth/partials/account_activated.html
+++ b/app/templates/auth/partials/account_activated.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row text-center">
             <h1 class="info2"><i class="ion-ios-checkmark"></i> Cuenta activada correctamente</h1>
-            <p><a ui-sref="register">Iniciar Sesión</a></p>
+            <p><a class="btn btn-outline-red" ui-sref="register">Iniciar Sesión</a></p>
+            <br>
             <img src="../../../img/corriente-alterna-logo.png" alt="">
         </div>
     </div>
