--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1140,7 +1140,7 @@ header
 .container-dash
   width 680px
 .content-dashboard
-  padding 70px 60px
+  padding 70px 0
   background-color #fff
 .title-section
   padding 10px 0 15px 0
