--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1351,7 +1351,7 @@ color
   width: 680px;
 }
 .content-dashboard {
-  padding: 70px 60px;
+  padding: 70px 0;
   background-color: #fff;
 }
 .title-section {
