--- a/app/templates/auth/address-new.html
+++ b/app/templates/auth/address-new.html
@@ -11,80 +11,93 @@
                                     <hr/>
                                 </div>
                                 <div class="col-md-12">
-                                    <form class="padding form-horizontal">
+                                    <form class="padding form-horizontal" name="Form"
+                                          ng-submit="Address.createAddress()" novalidate>
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
-                                                <label for="name">Ciudad</label>
-                                                <select class="form-control-select">
-                                                    <option>Seleccionar ciudad</option>
-                                                    <option>2</option>
-                                                    <option>3</option>
-                                                    <option>4</option>
-                                                    <option>5</option>
-                                                </select>
+                                                <label for="state">Estado</label>
+                                                <ui-select on-select="Address.getCitiesByState($model)"
+                                                           title="Estado" ng-model="Address.formData.state"
+                                                           name="states"
+                                                           id="state" required>
+                                                    <ui-select-match placeholder="Selecciona un Estado *..."
+                                                                     allow-clear="true">
+                                                        {{$select.selected.name}}
+                                                    </ui-select-match>
+                                                    <ui-select-choices
+                                                            repeat="state.id as state in Address.states | filter: {name: $select.search}">
+                                                        <div ng-bind-html="state.name | highlight: $select.search"></div>
+                                                    </ui-select-choices>
+                                                </ui-select>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
-                                                <label for="name">Estado</label>
-                                                <select class="form-control-select">
-                                                    <option>Seleccionar estado</option>
-                                                    <option>2</option>
-                                                    <option>3</option>
-                                                    <option>4</option>
-                                                    <option>5</option>
-                                                </select>
+                                                <label for="city">Ciudad</label>
+                                                <ui-select ng-model="Address.formData.city" id="city" name="cities" ng-required="Address.formData.state" ng-disabled="Address.busyCity"
+                                                           title="Ciudad" required>
+                                                    <ui-select-match placeholder="Selecciona una Ciudad *..." allow-clear="true">
+                                                        {{$select.selected.name}}
+                                                    </ui-select-match>
+                                                    <ui-select-choices repeat="city.id as city in Address.cities | filter: {name: $select.search}">
+                                                        <div ng-bind-html="city.name | highlight: $select.search"></div>
+                                                    </ui-select-choices>
+                                                </ui-select>
                                             </div>
                                         </div>
-                                        <div class="col-xs-12 col-md-6">
-                                            <div class="form-item">
-                                                <label for="name">Dirección</label>
-                                                <input type="text" class="form-control" id="name" name="name"
+                                        <div class="col-xs-12 col-md-6 clearfix">
+                                            <div class="form-item"
+                                                 ng-class="{ 'has-error': Form.address.$touched && Form.address.$invalid }">
+                                                <label for="address">Dirección</label>
+                                                <input ng-model="Address.formData.address" type="text"
+                                                       class="form-control" id="address" name="address"
                                                        placeholder="Dirección"
                                                        required>
+                                                <span ng-messages="Form.address.$error" ng-if="Form.address.$touched">
+                                                    <a ng-message="required" data-toggle="tooltip" title="Holiis"></a>
+                                                </span>
                                             </div>
+
                                         </div>
                                         <div class="col-xs-12 col-md-6">
-                                            <div class="form-item">
-                                                <label for="secondname">Colonia</label>
-
-                                                <input type="text" class="form-control" id="secondname"
-                                                       name="secondname"
+                                            <div class="form-item" ng-class="{ 'has-error': Form.neighborhood.$touched && Form.neighborhood.$invalid }">
+                                                <label for="neighborhood">Colonia</label>
+                                                <input ng-model="Address.formData.neighborhood" type="text" class="form-control" id="neighborhood"
+                                                       name="neighborhood"
                                                        placeholder="Colonia"
                                                        required>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
-                                            <div class="form-item">
-                                                <label for="user">Código Postal</label>
-
-                                                <input type="text" class="form-control" id="user" name="user"
+                                            <div class="form-item" ng-class="{ 'has-error': Form.zip.$touched && Form.zip.$invalid }">
+                                                <label for="zip">Código Postal</label>
+                                                <input ng-model="Address.formData.zip" type="text" ng-pattern="/^[0-9]{5}$/" maxlength="5" class="form-control" id="zip" name="zip"
                                                        placeholder="Código Postal"
                                                        required>
                                             </div>
                                         </div>
                                         <div class="col-xs-12 col-md-6">
-                                            <div class="form-item">
-                                                <label for="password">Teléfono</label>
-                                                <input type="password" class="form-control" id="password"
-                                                       name="password"
+                                            <div ng-model="Address.formData.phone" class="form-item" ng-class="{ 'has-error': Form.phone.$touched && Form.phone.$invalid }">
+                                                <label for="phone">Teléfono</label>
+                                                <input type="text" maxlength="25"  class="form-control" id="phone"
+                                                       name="phone"
                                                        placeholder="Teléfono" required>
                                             </div>
 
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <div class="form-item">
-                                                <label for="password">Celular</label>
-                                                <input type="password" class="form-control" id="password"
-                                                       name="password"
+                                                <label for="mobile" ng-class="{ 'has-error': Form.mobile.$touched && Form.mobile.$invalid }">Celular</label>
+                                                <input ng-model="Address.formData.mobile" type="text" ng-maxlength="25" class="form-control" id="mobile"
+                                                       name="mobile"
                                                        placeholder="Celular" required>
                                             </div>
 
                                         </div>
                                         <div class="col-md-12 text-center" style="padding-top: 30px;">
                                             <button type="submit" class="btn btn-outline-red"
-                                                    ng-disabled="Contact.busy">
-                                                <i class="ion-android-done"></i> Agregar <span ng-if="Contact.busy"><i
+                                                    ng-disabled="Address.$invalid || Address.busy">
+                                                <i class="ion-android-done"></i> Guardar <span ng-if="Contact.busy"><i
                                                     class="fa fa-spinner fa-spin"></i></span>
                                             </button>
                                         </div>
