--- a/app/templates/auth/addresses.html
+++ b/app/templates/auth/addresses.html
@@ -1,122 +1,56 @@
 <div class="content-dashboard">
     <div class="container">
-        <div class="col-md-12">
+        <div class="col-xs-12 col-md-12">
             <div class="row">
                 <div class="col col-xs-6">
                     <h3 class="info2"><i class="ion-ios-list"></i> Lista de direcciones</h3>
                 </div>
                 <div class="col col-xs-6 text-right">
-                    <button ui-sref="address-add" class="btn btn-primary btn-xs"><i class="ion-plus-circled"></i>
+                    <button title="Agregar nueva dirección" ui-sref="address-add" class="btn btn-primary btn-xs"><i class="ion-plus-circled"></i>
                     </button>
                 </div>
             </div>
             <hr>
-            <div class="table-responsive">
-                <table id="mytable" class="table table-striped">
-                    <thead>
-                    <th>Estado</th>
-                    <th>Ciudad</th>
-                    <th>Dirección</th>
-                    <th>Colonia</th>
-                    <th>Código Postal</th>
-                    <th>Teléfono</th>
-                    <th>Edit <i class="fa fa-cog"></i></th>
-                    </thead>
+            <div class="row">
+                <div class="col-xs-10 col-sm-6 col-md-4 pull-right search-ca">
+                    <form name="Address.searchForm" ng-submit="Address.globalSearch()" class="ca-form">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Buscar" name="searchTerm"
+                                   ng-model="Address.searchTerm" ng-change="Address.globalSearch()"/>
+                            <span class="input-group-btn">
+                    <button class="btn btn-default btn-search-ca" type="submit">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button></span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="table-responsive" loading-container="Address.tableParams.settings().$loading">
+                <table class="table table-bordered bg-white table-striped" ng-table="Address.tableParams"
+                       show-filter="false">
                     <tbody>
-                    <tr ng-repeat="address in Address.addresses">
-                        <td>{{ address.stateName.name }}</td>
-                        <td>{{ address.cityName.name }}</td>
-                        <td>{{ address.address }}</td>
-                        <td>{{ address.neighborhood }}</td>
-                        <td>{{ address.zip }}</td>
-                        <td>{{ address.phone }}</td>
-                        <td>
-                            <button class="btn btn-primary btn-xs" ui-sref="address-update({ id: Address.idUser })" data-title="Edit">
+                    <tr ng-repeat="address in Address.addresses" datasource="address" ref="Address">
+                        <td data-title="'Estado'" sortable="'id'">{{ address.stateName.name }}</td>
+                        <td data-title="'Ciudad'" sortable="'name'">{{ address.cityName.name }}</td>
+                        <td data-title="'Domicilio'" sortable="'price'">{{ address.address }}</td>
+                        <td data-title="'Colonia'">{{ address.neighborhood }}</td>
+                        <td data-title="'Código Postal'">{{ address.zip }}</td>
+                        <td data-title="'Teléfono'">{{ address.phone }}</td>
+                        <td data-title="'Acciones'">
+                            <button title="Editar dirección" class="btn btn-primary btn-xs" ui-sref="address-update({ id: Address.idUser })" data-title="Edit">
                                 <span class="glyphicon glyphicon-pencil"></span></button>
-                            <button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                    data-target="#delete"><span class="glyphicon glyphicon-trash"></span></button>
-                        </td>
+                            <button title="Eliminar dirección" class="btn btn-danger btn-xs" ng-click="Address.deleteAddress(address.id)">
+                                <span class="glyphicon glyphicon-trash"></span></button></td>
                     </tr>
                     </tbody>
+                    <tfooter>
+                        <tr ng-hide="Address.addresses.length">
+                            <td colspan="7" class="text-center">Ningún dato disponible</td>
+                        </tr>
+                    </tfooter>
                 </table>
-                <div class="clearfix"></div>
-                <ul class="pagination pull-right">
-                    <li class="disabled"><a href="#"><span class="glyphicon glyphicon-chevron-left"></span></a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-chevron-right"></span></a></li>
-                </ul>
-
             </div>
-
         </div>
     </div>
-
-
-    <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span
-                            class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                    <h4 class="modal-title custom_align" id="Heading">Edit Your Detail</h4>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <input class="form-control " type="text" placeholder="Mohsin">
-                    </div>
-                    <div class="form-group">
-
-                        <input class="form-control " type="text" placeholder="Irshad">
-                    </div>
-                    <div class="form-group">
-                        <textarea rows="2" class="form-control"
-                                  placeholder="CB 106/107 Street # 11 Wah Cantt Islamabad Pakistan"></textarea>
-
-
-                    </div>
-                </div>
-                <div class="modal-footer ">
-                    <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span
-                            class="glyphicon glyphicon-ok-sign"></span> Update
-                    </button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-
-
-    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span
-                            class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-                    <h4 class="modal-title custom_align" id="Heading">Delete this entry</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Are you sure
-                        you want to delete this Record?
-                    </div>
-
-                </div>
-                <div class="modal-footer ">
-                    <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-ok-sign"></span> Yes
-                    </button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal"><span
-                            class="glyphicon glyphicon-remove"></span> No
-                    </button>
-                </div>
-            </div>
-            <!-- /.modal-content -->
-        </div>
-        <!-- /.modal-dialog -->
-    </div>
-
 </div>
+
